setup PD profiles for 30 W and 80 W
even though most USB PD adaptors will allow a device to draw the max
advertised current, kosher ones will cut power if the profile has not
been enumerated (Apple MacBook for example). Added initialisation of
profiles at start up.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -20,10 +20,13 @@ TARGET = firmware
 # building variables
 ######################################
 # debug build?
-DEBUG = 1
+DEBUG = 0
 # optimization
+ifeq ($(DEBUG), 1)
 OPT = -Og
-
+else
+OPT = -Os
+endif
 
 #######################################
 # paths
